Fixes #16081: Automatically restart relayd in case of crash

--- a/relay/sources/man/rudder-relayd.1.adoc
+++ b/relay/sources/man/rudder-relayd.1.adoc
@@ -27,6 +27,17 @@ the upstream relay or send them to the root server.
 *-V, --version*::
   Print version information.
 
+== EXIT CODES
+
+*0*::
+  Normal shutdown
+*1*::
+  Unexpected crash
+*2*::
+  Invalid configuration files
+*3*::
+  Other errors
+
 == AUTHOR
 
 Rudder developers <dev@rudder.io>
