[TEST] Test tests

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = Rudder: Continuous Auditing & Configuration
 
+Test PR
+
 image::readme-resources/color_logo_horizontal_small.png[Rudder]
 
 image:https://img.shields.io/badge/chat-with the community-brightgreen.svg?style=flat[link="https://docs.rudder.io"]
