Refs #16811: rl generate oslib from separated build

--- a/rudder-lang/README.adoc
+++ b/rudder-lang/README.adoc
@@ -60,9 +60,7 @@ The compiler is very pedantic to avoid defining invalid states as much as possib
 == Tests
 
 === Required modules
-- perl (script: *src/generate-lib*)
-    `cpan TOML::Parser`
-    
+- perl (script: *tools/generate-lib*)
+    cpan Config::IniFiles
 === Configuration
-- *cfg.toml* to define the cfengine and ncf binaries paths, and the compilation, translation paths
-(will require to install the `toml` library: `pip3 install toml`)
+- *rudderc.conf* to define the cfengine and ncf binaries paths, and the compilation, translation paths
