Fixes #16846: tests changes to prepare rudder-lang integration

--- a/rudder-lang/README.adoc
+++ b/rudder-lang/README.adoc
@@ -61,7 +61,6 @@ The compiler is very pedantic to avoid defining invalid states as much as possib
 
 === Required modules
 - perl (script: *tools/generate-lib*)
-    
+    cpan Config::IniFiles
 === Configuration
 - *rudderc.conf* to define the cfengine and ncf binaries paths, and the compilation, translation paths
-(will require to install the `toml` library: `pip3 install toml`)
