Fixes #16942: Test code examples is rudder lang docs

--- a/rudder-lang/docs/index.adoc
+++ b/rudder-lang/docs/index.adoc
@@ -27,19 +27,7 @@ Example:
 ntp.rl
 [source,rl]
 ----
-@format=0
-
-@name="Configure NTP"
-@description="test"
-@version="1.0"
-@parameters=[]
-
-resource Configure_NTP()
-
-Configure_NTP state technique() {
-  @component = "Package present"
-  package("ntp").present("","","") as package_present_ntp
-}
+include::examples/ntp.rl[]
 ----
 
 // TODO: comparison with CFEngine, Puppet (mgmt ?)
