--- a/rudder-lang/docs/index.adoc
+++ b/rudder-lang/docs/index.adoc
@@ -1,24 +1,33 @@
 // TODO put images on a rudder server and put documentation images dir url here
-:imagesdir: resources/
+// :imagesdir: url
+:toc: left
+
+// TODO list
+// Comment migrer une technique
+// Le mapping avec le ncf existant
+// Les idées principales, la notion d'état et de resource -> DONE v0
+// mots cles, a quoi ils servent -> DONE v0
+// Des exemples -> DONE v0
+// Les enums -> DONE v0
+// Les variables -> DONE v0
 
 = Rudder language
 
+alias _rudder-lang_
+
 == Language
-
-This language is:
-
 
 This language is not:
 
-- a general purpose language
-- a turing complete language
-- an imperative language
+* a general purpose language
+* a turing complete language
+* an imperative language
 
 It has no:
 
-- recursion
-- generator / generic iterator
-- way of looping except on finite list
+* recursion
+* generator / generic iterator
+* way of looping except on finite list
 
 This language is a DSL (_domain-specific language_) targeted at *state definition*.
 
@@ -30,18 +39,41 @@ File extension is `rl` for *R*udder *L*anguage.
 
 Example:
 
-ntp.rl
-[source,rl]
+.ntp.rl
+[source,rudder-lang]
 ----
 include::examples/ntp.rl[]
 ----
 
+Once compiled to _CFEngine_ code:
+
+.ntp.rl.cf
+[source,cfengine]
+----
+include::examples/ntp.rl.cf[]
+----
 // TODO: comparison with CFEngine, Puppet (mgmt ?)
 
+
+// == Concepts
 include::concepts.adoc[leveloffset=+1]
 
-include::syntax.adoc[leveloffset=+1]
+// == Lexical structure
+include::lexical-structure.adoc[leveloffset=+1]
 
-include::stdlib.adoc[leveloffset=+1]
+// == Types
+include::types.adoc[leveloffset=+1]
 
-include::operating-system.adoc[leveloffset=+1]
+// == Items
+include::items.adoc[leveloffset=+1]
+// === Enums                                                                                           
+include::enums.adoc[leveloffset=+2]
+
+== Statements and Expressions
+include::statements-and-expressions.adoc[leveloffset=+2]
+
+== Appendices
+
+include::stdlib.adoc[leveloffset=+2]
+
+include::operating-systems.adoc[leveloffset=+2]
